perf: replace Collectors.toList() by toList()