@@ -43,7 +43,7 @@ public class MultiResourceBundleControl extends ResourceBundle.Control {
         List<ResourceBundle> delegates = Arrays.stream(this.dependentBaseNames)
                 .filter(currentBaseName -> currentBaseName != null && !currentBaseName.trim().isEmpty())
                 .map(currentBaseName -> ResourceBundle.getBundle(currentBaseName, locale))
-                .collect(Collectors.toList());
+                .toList();
 
         return new MultiResourceBundle(delegates);
     }
