@@ -49,7 +49,7 @@ public class TimeOfDayR5 implements TimeOfDay<FDSConfigR5, Dosage> {
                 .getTimeOfDay()
                 .stream()
                 .map(PrimitiveType::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /** {@inheritDoc} */
@@ -65,7 +65,7 @@ public class TimeOfDayR5 implements TimeOfDay<FDSConfigR5, Dosage> {
         return CompletableFuture.supplyAsync(() -> {
 
             var times = getTimes(dosage);
-            var timeOfDays = times.stream().map(this::formatString).collect(Collectors.toList());
+            var timeOfDays = times.stream().map(this::formatString).toList();
             var timeOfDaysAsString = ListToString.convert(bundle, timeOfDays);
 
             Map<String, Object> messageArguments = Map.of(
